--- a/pipelineconfig.json
+++ b/pipelineconfig.json
@@ -17,6 +17,7 @@
   },
   "userName":"rajarahul12",
   "repoName": "Testionic",
+  "githubToken": "5c69a003734cb57ce36a4830ea14057827a97fd1",
   "ios": {
      "host": "9.109.199.108",
      "botId": "1f4a17d56578a822a49567af88000ead"
