--- a/pipelineconfig.json
+++ b/pipelineconfig.json
@@ -1,8 +1,8 @@
 {
   "env_choice": "default",
   "development": {
-    "hostname": "9.109.199.146",
-    "port": "9080",
+    "hostname": "mobilefoundation-nn40-server.eu-gb.mybluemix.net",
+    "port": "443",
     "servercred": "admin:admin"
   },
   "production": {
