--- a/pipelineconfig.json
+++ b/pipelineconfig.json
@@ -11,8 +11,8 @@
     "servercred": "admin:admin"
   },
   "default": {
-    "hostname": "184.173.5.44",
-    "port": "30989",
+    "hostname": "mobilefoundation-nn40-server.eu-gb.mybluemix.net",
+    "port": "443",
     "servercred": "admin:admin"
   },
   "userName":"rajarahul12",
