--- a/pipelineconfig.json
+++ b/pipelineconfig.json
@@ -11,12 +11,12 @@
     "servercred": "admin:admin"
   },
   "default": {
-    "hostname": "9.109.199.146",
+    "hostname": "192.168.0.2",
     "port": "9080",
     "servercred": "admin:admin"
   },
   "userName":"rajarahul12",
-  "repoName": "Testionic",
+  "repoName": "ModResorts",
   "ios": {
      "host": "9.109.199.146",
      "botId": "1d3525b721c85348eb204583df000416"
