--- a/pipelineconfig.json
+++ b/pipelineconfig.json
@@ -11,8 +11,8 @@
     "servercred": "admin:admin"
   },
   "default": {
-    "hostname": "192.168.0.2",
-    "port": "9080",
+    "hostname": "mobilefoundationdemo.apps.ocp41-sv21.os.fyre.ibm.com",
+    "port": "80",
     "servercred": "admin:admin"
   },
   "userName":"rajarahul12",
