--- a/ibm/mobile_config/config.json
+++ b/ibm/mobile_config/config.json
@@ -1,1 +1,1 @@
-{"applicationKey":{"version":"1.0.0","clientPlatform":"android","packageName":"com.ibm.modResorts"},"displayName":"ModResorts"}
+{"applicationKey":{"version":"1.0.0","clientPlatform":"android","packageName":"com.ibm.test"},"displayName":"Test"}
