--- a/pipelineconfig.json
+++ b/pipelineconfig.json
@@ -1,5 +1,5 @@
 {
-  "env_choice": "default",
+  "env_choice": "development",
   "development": {
     "hostname": "mobilefoundation-nn40-server.eu-gb.mybluemix.net",
     "port": "443",
